Fix pop ups for projects in dark mode

--- a/css/style.scss
+++ b/css/style.scss
@@ -111,6 +111,18 @@ hr {
   color: #abb1bf;
 }
 
+.darkmode--activated .modal-content {
+  background-color: black;
+}
+
+.darkmode--activated .modal-content {
+  background-color: black;
+}
+
+.darkmode--activated .close-modal {
+  background-color: #abb1bf;
+}
+
 
 /**************/
 /*   SIDEBAR  */
